(fix): update spacing & text font-weight in header and footer

--- a/src/scss/custom/_footer.scss
+++ b/src/scss/custom/_footer.scss
@@ -28,7 +28,6 @@
     .subscription-title{
       color: #5e5873;
       font-weight: 600;
-      margin-bottom: 0;
     }
     // CheatSheet social links
     .cheatsheet-social{
