--- a/src/scss/custom/_header.scss
+++ b/src/scss/custom/_header.scss
@@ -46,6 +46,10 @@
       font-weight: 500;
       color: #7b7885;
       margin-bottom: 2rem;
+      .cheatsheet-subtitle-span {
+        font-weight: 800;
+        color: $cheatsheet-text-color;
+      }
     }
 
     .cheatsheet-infoline{
